--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,23 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
 
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <!-- 打包时排除JRebel插件生成的配置文件 -->
+                <excludes>
+                    <exclude>**/rebel.xml</exclude>
+                </excludes>
+            </resource>
+
+            <!-- 打包所有resources下的文件 -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
