--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:mysql://101.43.145.108:3306/getoffreminder?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driverClassName: com.mysql.cj.jdbc.Driver
     username: GetOffReminder
-    password: l198923.
+    password: f5FPFyGyCY8kn2ep
   redis:
     database: 0
     host: 101.43.145.108
@@ -18,6 +18,6 @@ spring:
         max-wait: -1
         max-idle: 8
         min-idle: 0
-  mybatis:
-    type-aliases-package: com.liu.getOffBusReminder.dao.entity
-    mapper-locations: classpath:dao/*Mapper.xml
+mybatis:
+  type-aliases-package: com.liu.getOffBusReminder.dao.entity
+  mapper-locations: classpath:mapper/*.xml
