加入输入提示

--- a/src/main/resources/GetOffReminder.properties
+++ b/src/main/resources/GetOffReminder.properties
@@ -3,4 +3,4 @@ addressEncodeUrl=https://restapi.amap.com/v3/geocode/geo
 goalAddress=\u5317\u4EAC\u5E02\u897F\u57CE\u533A\u4EC0\u5239\u6D77\u524D\u6D77\u897F\u885717\u53F7
 upDes=\u4EC0\u5239\u6D77\u5730\u94C1\u7AD9A2\u897F\u5317\u53E3
 #\u8F93\u5165\u63D0\u793A
-inputPrompt=https://restapi.amap.com/v3/assistant/inputtips
+inputPromptUrl=https://restapi.amap.com/v3/assistant/inputtips
