优化位置填充

--- a/src/main/resources/GetOffReminder.properties
+++ b/src/main/resources/GetOffReminder.properties
@@ -1,6 +1,6 @@
 key=a698dbc1301c5106b68dfa758db7bc6d
-addressEncodeUrl=https://restapi.amap.com/v3/geocode/geo
-goalAddress=\u5317\u4EAC\u5E02\u897F\u57CE\u533A\u4EC0\u5239\u6D77\u524D\u6D77\u897F\u885717\u53F7
-upDes=\u4EC0\u5239\u6D77\u5730\u94C1\u7AD9A2\u897F\u5317\u53E3
+distanceUrl=http://restapi.amap.com/v3/distance
+upDes=\u4EC0\u5239\u6D77\u5730\u94C1\u7AD9
+downDes=\u56DE\u9F99\u89C2\u4E1C\u5927\u8857\u5730\u94C1\u7AD9
 #\u8F93\u5165\u63D0\u793A
 inputPromptUrl=https://restapi.amap.com/v3/assistant/inputtips
